// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delegates Listing With Groups render data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical StyledProps--main listBody"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="width: 100%; height: 100%;"
      >
        <div
          class="StyledProps--font StyledProps--main spinner"
        >
          <div
            class="StyledProps--font StyledProps--main PageSpinner--spinner StyledProps--flex StyledProps--flex-align-center-center"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main PageSpinner--content"
              style="align-items: center; width: 500px;"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
                data-icon="steps-spinner"
              >
                <svg
                  height="32"
                  viewBox="0 0 128 128"
                  width="32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                      fill="#ff8e02"
                    />
                    <path
                      d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                      fill="#ffddb3"
                      fill-opacity="0.3"
                    />
                    <path
                      d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                      fill="#ffd29a"
                      fill-opacity="0.4"
                    />
                    <path
                      d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                      fill="#ffc680"
                      fill-opacity="0.5"
                    />
                    <path
                      d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                      fill="#ffbb67"
                      fill-opacity="0.6"
                    />
                    <path
                      d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                      fill="#ffb04d"
                      fill-opacity="0.7"
                    />
                    <path
                      d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                      fill="#ffa535"
                      fill-opacity="0.8"
                    />
                    <path
                      d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                      fill="#ff991b"
                      fill-opacity="0.9"
                    />
                    <animatetransform
                      attributeName="transform"
                      calcMode="discrete"
                      dur="1200ms"
                      repeatCount="indefinite"
                      type="rotate"
                      values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                    />
                  </g>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
              >
                Loading, please wait...
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Delegates Listing without tags render data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical StyledProps--main listBody"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="width: 100%; height: 100%;"
      >
        <div
          class="StyledProps--font StyledProps--main spinner"
        >
          <div
            class="StyledProps--font StyledProps--main PageSpinner--spinner StyledProps--flex StyledProps--flex-align-center-center"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main PageSpinner--content"
              style="align-items: center; width: 500px;"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
                data-icon="steps-spinner"
              >
                <svg
                  height="32"
                  viewBox="0 0 128 128"
                  width="32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                      fill="#ff8e02"
                    />
                    <path
                      d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                      fill="#ffddb3"
                      fill-opacity="0.3"
                    />
                    <path
                      d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                      fill="#ffd29a"
                      fill-opacity="0.4"
                    />
                    <path
                      d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                      fill="#ffc680"
                      fill-opacity="0.5"
                    />
                    <path
                      d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                      fill="#ffbb67"
                      fill-opacity="0.6"
                    />
                    <path
                      d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                      fill="#ffb04d"
                      fill-opacity="0.7"
                    />
                    <path
                      d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                      fill="#ffa535"
                      fill-opacity="0.8"
                    />
                    <path
                      d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                      fill="#ff991b"
                      fill-opacity="0.9"
                    />
                    <animatetransform
                      attributeName="transform"
                      calcMode="discrete"
                      dur="1200ms"
                      repeatCount="indefinite"
                      type="rotate"
                      values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                    />
                  </g>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
              >
                Loading, please wait...
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test delegate buttons click on filter 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: 100%;"
  >
    <div
      class="Layout--horizontal StyledProps--main header"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
        data-test="newDelegateButton"
        id="newDelegateBtn"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          delegates.newDelegate
        </span>
      </button>
      <span
        style="flex-grow: 1;"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search  ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
          data-name=""
          style="width: 250px; max-width: 250px;"
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="search"
            style="padding-right: 38px;"
            type="search"
            value=""
          />
        </div>
        <div
          class="bp3-popover-wrapper DropDown--main DropDown--disabled"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class=""
            >
              <div
                class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
                data-testid="filter-select"
                style="min-width: 220px;"
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                    data-testid="dropdown-value"
                    style="--text-line-clamp: 1;"
                  >
                    common.filters.noFilterSaved
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                    data-icon="main-chevron-down"
                  >
                    <svg
                      height="8"
                      viewBox="0 0 14 8"
                      width="8"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="filterButtonContainer"
        >
          <button
            class="bp3-button bp3-disabled bp3-loading bp3-minimal Button--button StyledProps--font StyledProps--main ngFilter StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
            disabled=""
            id="ngfilterbtn"
            tabindex="-1"
            type="button"
          >
            <div
              class="bp3-spinner bp3-button-spinner"
            >
              <div
                class="bp3-spinner-animation"
              >
                <svg
                  height="20"
                  stroke-width="16.00"
                  viewBox="-3.00 -3.00 106.00 106.00"
                  width="20"
                >
                  <path
                    class="bp3-spinner-track"
                    d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  />
                  <path
                    class="bp3-spinner-head"
                    d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                    pathLength="280"
                    stroke-dasharray="280 280"
                    stroke-dashoffset="210"
                  />
                </svg>
              </div>
            </div>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="ng-filter"
            >
              <svg
                height="22"
                viewBox="0 0 24 24"
                width="22"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        />
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main listBody"
    >
      <div
        class="StyledProps--font StyledProps--main delegateListContainer"
        style=""
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 100%;"
        >
          <div
            class="Layout--horizontal StyledProps--main delegateListHeader"
          >
            <div
              style="width: 80px;"
            />
            <div
              style="width: 25%;"
            >
              delegate.DelegateName
            </div>
            <div
              style="width: 20%;"
            >
              tagsLabel
            </div>
            <div
              style="width: 20%;"
            >
              instanceFieldOptions.instances
            </div>
            <div
              style="width: calc(15% - 40px);"
            >
              delegate.LastHeartBeat
            </div>
            <div
              style="width: calc(15% - 40px);"
            >
              connectivityStatus
            </div>
            <div
              style="width: 5%;"
            />
          </div>
          <div
            class="bp3-card bp3-interactive bp3-elevation-2 Card--card delegateItemContainer Card--interactive"
            tabindex="0"
          >
            <div
              class="Layout--horizontal StyledProps--main delegateItemSubcontainer"
            >
              <div
                class="delegateItemIcon"
                style="width: 80px;"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main expandIcon"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M13.71 9.29l-6-6a1.003 1.003 0 00-1.42 1.42l5.3 5.29-5.29 5.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l6-6c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main"
                  style="display: flex; align-items: center;"
                >
                  <span
                    class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                    data-icon="app-kubernetes"
                  >
                    <svg
                      height="24"
                      viewBox="0 0 32 30"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                      >
                        <path
                          d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                          fill="#326CE5"
                        />
                        <path
                          d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.052c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                          fill="#FFF"
                          stroke="#FFF"
                          stroke-width="0.25"
                        />
                      </g>
                    </svg>
                  </span>
                </p>
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
                data-testid="groupHostName1"
                style="width: 25%;"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    data-testid="delegate-1"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                    >
                      delegate-1
                    </p>
                  </div>
                  <div
                    class="groupHostName"
                  >
                    groupHostName1
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main connectivity"
                style="width: 20%;"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="display: inline-flex; flex-wrap: wrap;"
                />
                <span />
              </div>
              <div
                class="Layout--horizontal StyledProps--main instancesColumn"
                style="width: 20%;"
              >
                0
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
                style="width: calc(15% - 40px);"
              >
                dummy date
              </div>
              <div
                class="Layout--vertical StyledProps--main"
                style="width: calc(15% - 40px);"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="display: flex; align-items: center;"
                >
                  <span
                    class="bp3-icon bp3-icon-full-circle StyledProps--main Text--icon StyledProps--padding-small StyledProps--color StyledProps--color-green600"
                    icon="full-circle"
                  >
                    <svg
                      data-icon="full-circle"
                      height="6"
                      viewBox="0 0 16 16"
                      width="6"
                    >
                      <desc>
                        full-circle
                      </desc>
                      <path
                        d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  connected
                </p>
              </div>
              <div
                class="Layout--vertical StyledProps--main"
                style="width: 5%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main itemActionContainer"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test delegate buttons click on new delegate 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: 100%;"
  >
    <div
      class="Layout--horizontal StyledProps--main header"
    >
      <button
        class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
        data-test="newDelegateButton"
        disabled=""
        id="newDelegateBtn"
        tabindex="-1"
        type="button"
      >
        <div
          class="bp3-spinner bp3-button-spinner"
        >
          <div
            class="bp3-spinner-animation"
          >
            <svg
              height="20"
              stroke-width="16.00"
              viewBox="-3.00 -3.00 106.00 106.00"
              width="20"
            >
              <path
                class="bp3-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp3-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          delegates.newDelegate
        </span>
      </button>
      <span
        style="flex-grow: 1;"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search  ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
          data-name=""
          style="width: 250px; max-width: 250px;"
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="search"
            style="padding-right: 38px;"
            type="search"
            value=""
          />
        </div>
        <div
          class="bp3-popover-wrapper DropDown--main DropDown--disabled"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class=""
            >
              <div
                class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
                data-testid="filter-select"
                style="min-width: 220px;"
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                    data-testid="dropdown-value"
                    style="--text-line-clamp: 1;"
                  >
                    common.filters.noFilterSaved
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                    data-icon="main-chevron-down"
                  >
                    <svg
                      height="8"
                      viewBox="0 0 14 8"
                      width="8"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="filterButtonContainer"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main ngFilter StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
            id="ngfilterbtn"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="ng-filter"
            >
              <svg
                height="22"
                viewBox="0 0 24 24"
                width="22"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        />
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main listBody"
    >
      <div
        class="StyledProps--font StyledProps--main delegateListContainer"
        style=""
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 100%;"
        >
          <div
            class="Layout--horizontal StyledProps--main delegateListHeader"
          >
            <div
              style="width: 80px;"
            />
            <div
              style="width: 25%;"
            >
              delegate.DelegateName
            </div>
            <div
              style="width: 20%;"
            >
              tagsLabel
            </div>
            <div
              style="width: 20%;"
            >
              instanceFieldOptions.instances
            </div>
            <div
              style="width: calc(15% - 40px);"
            >
              delegate.LastHeartBeat
            </div>
            <div
              style="width: calc(15% - 40px);"
            >
              connectivityStatus
            </div>
            <div
              style="width: 5%;"
            />
          </div>
          <div
            class="bp3-card bp3-interactive bp3-elevation-2 Card--card delegateItemContainer Card--interactive"
            tabindex="0"
          >
            <div
              class="Layout--horizontal StyledProps--main delegateItemSubcontainer"
            >
              <div
                class="delegateItemIcon"
                style="width: 80px;"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main expandIcon"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M13.71 9.29l-6-6a1.003 1.003 0 00-1.42 1.42l5.3 5.29-5.29 5.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l6-6c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main"
                  style="display: flex; align-items: center;"
                >
                  <span
                    class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                    data-icon="app-kubernetes"
                  >
                    <svg
                      height="24"
                      viewBox="0 0 32 30"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                      >
                        <path
                          d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                          fill="#326CE5"
                        />
                        <path
                          d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.052c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                          fill="#FFF"
                          stroke="#FFF"
                          stroke-width="0.25"
                        />
                      </g>
                    </svg>
                  </span>
                </p>
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
                data-testid="groupHostName1"
                style="width: 25%;"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    data-testid="delegate-1"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                    >
                      delegate-1
                    </p>
                  </div>
                  <div
                    class="groupHostName"
                  >
                    groupHostName1
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main connectivity"
                style="width: 20%;"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="display: inline-flex; flex-wrap: wrap;"
                />
                <span />
              </div>
              <div
                class="Layout--horizontal StyledProps--main instancesColumn"
                style="width: 20%;"
              >
                0
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
                style="width: calc(15% - 40px);"
              >
                dummy date
              </div>
              <div
                class="Layout--vertical StyledProps--main"
                style="width: calc(15% - 40px);"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="display: flex; align-items: center;"
                >
                  <span
                    class="bp3-icon bp3-icon-full-circle StyledProps--main Text--icon StyledProps--padding-small StyledProps--color StyledProps--color-green600"
                    icon="full-circle"
                  >
                    <svg
                      data-icon="full-circle"
                      height="6"
                      viewBox="0 0 16 16"
                      width="6"
                    >
                      <desc>
                        full-circle
                      </desc>
                      <path
                        d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  connected
                </p>
              </div>
              <div
                class="Layout--vertical StyledProps--main"
                style="width: 5%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main itemActionContainer"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
